<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fauzan.covid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_indonesia"
        android:name="com.fauzan.covid.ui.indonesia.IndonesiaFragment"
        android:label="@string/title_indonesia"
        tools:layout="@layout/fragment_indonesia" />

    <fragment
        android:id="@+id/navigation_question"
        android:name="com.fauzan.covid.ui.questions.QuestionsFragment"
        android:label="@string/title_question"
        tools:layout="@layout/fragment_questions" />
</navigation>